--- a/partials/author/widget-meetup.hbs
+++ b/partials/author/widget-meetup.hbs
@@ -45,10 +45,10 @@ function createMeetupCard(meetup) {
             '<div class="eventheader">' + eventimage + ' \n ' +
             '<span class="eventname">' + events[i].name + '</span></div> \n ' +
             '<div class="eventinfo"> \n ' +
-            '<span class="eventhost"><i class="fal fa-users"></i> ' + events[i].group.name + '</span> \n ' +
-            '<span class="venuename"><i class="fal fa-building"></i> ' + events[i].venue.name + '</span> \n ' +
-            '<span class="venueaddress"><i class="fal fa-map-pin"></i> ' + events[i].venue.address_1 + '</span> \n ' +
-            //'<span class="date"><i class="fas fa-calendar"></i> ' + date.toString("MMM dd") + '</span> \n ' +
+            '<span class="eventhost"><i class="far d fa-users"></i> ' + events[i].group.name + '</span> \n ' +
+            '<span class="venuename"><i class="far d fa-building"></i> ' + events[i].venue.name + '</span> \n ' +
+            '<span class="venueaddress"><i class="far d fa-map-pin"></i> ' + events[i].venue.address_1 + '</span> \n ' +
+            //'<span class="date"><i class="far d fa-calendar"></i> ' + date.toString("MMM dd") + '</span> \n ' +
             '</div></div></a>');
         }
       }
