--- a/partials/projects/projects-dropdown.hbs
+++ b/partials/projects/projects-dropdown.hbs
@@ -2,7 +2,7 @@
     <div class="projects-dropdown">
         <ul>
             <li class="picker">
-              <span class="make-selection">Select a Project</span><i class="fas fa-caret-down dropdown-arrow"></i>
+              <span class="make-selection">Select a Project</span><i class="far d fa-caret-down dropdown-arrow"></i>
                 <ul class="dropdown-list">
                   <li class="stockholmproject">
                       <svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -33,7 +33,7 @@
                   </li>
                 </ul>
             </li>
-            <li class="mobilemenu"><span>Select a Project</span> <i class="fas fa-caret-down"></i>
+            <li class="mobilemenu"><span>Select a Project</span> <i class="far d fa-caret-down"></i>
                 <ul class="dropdown-list">
                     <li class="stockholmproject">
                         <svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
