--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -5,7 +5,9 @@
 <!--<script src="{{asset "js/includes/picturefill.min.js"}}"></script>-->
 <script async src="{{asset "js/global.js"}}"></script>
 <noscript id="deferred-styles">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-xVVam1KS4+Qt2OrFa+VdRUoXygyKIuNWUUUBZYv+n27STsJ7oDOHJgfF0bNKLMJF" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.2/css/regular.css" integrity="sha384-jyNdSTwsauV6/i9u6sKFOZBrxlr4QREAY295HsNy8laz4LYryhnPdz0ewFVERKfV" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.2/css/brands.css" integrity="sha384-BeZiOfMYSXjscewXEIJ0PDoBy27u+zVSTP5ZuW3kjEZKCn7pOB7v+oQVtAtHfY0v" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.2/css/fontawesome.css" integrity="sha384-fqilzf6i0kkOYm+DT4UC9pWzYf4/eFdJKroY1jZyE7n8eYLujyYM9VCucGf/LdVD" crossorigin="anonymous">
 </noscript>
 <script>
        const loadDeferredStyles = function() {
