--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -16,7 +16,7 @@
     </div>
     <div class="meta">
       {{#primary_tag}}
-        <span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span>
+        <span class="tags meta-item {{slug}}"><i class="far d fa-tags"></i> <span>{{name}}</span></span>
       {{/primary_tag}}
       {{#primary_author}}
         {{primary_author.bio}}
@@ -27,11 +27,11 @@
             <!--<span class="mobile-date">{{date format="MMM DD"}}</span>-->
           </div>
         {{else}}
-          <a href="{{url}}" class="meta-item author"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
-          <a href="{{url}}" class="author-mobile"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i></a>
+          <a href="{{url}}" class="meta-item author"><i class="far d fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
+          <a href="{{url}}" class="author-mobile"><i class="far d fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i></a>
         {{/if}}
       {{/primary_author}}
-      <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM DD"}}</span></span>
+      <span class="date meta-item"><i class="far d fa-calendar"></i> <span>{{date format="MMM DD"}}</span></span>
     </div>
   </div>
 </article>
