--- a/partials/widgets/widget-author.hbs
+++ b/partials/widgets/widget-author.hbs
@@ -12,12 +12,12 @@
         {{!--{{t "About"}}--}}<a href="{{url}}">{{name}}</a>
       </div>
       <div class="meta-info">
-        {{!--<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</a></span>--}}
+        {{!--<span class="post-count"><i class="far d fa-pencil"></i><a href="{{url}}">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</a></span>--}}
         {{#if location}}
-          <span class="loaction"><i class="fal fa-home"></i>{{location}}</span>
+          <span class="location"><i class="far d fa-home"></i>{{location}}</span>
         {{/if}}
         {{#if website}}
-          <span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i>{{t "Website"}}</a></span>
+          <span class="website"><a href="{{website}}" targer="_BLANK"><i class="far d fa-globe"></i>{{t "Website"}}</a></span>
         {{/if}}
         {{#if twitter}}
           <span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i>{{twitter_url}}</a></span>
