--- a/series.hbs
+++ b/series.hbs
@@ -12,7 +12,7 @@
 				<!-- start sorting widget -->
 				<div class="sort-container">
 					<div class="sort">
-						<span class="sort-title">Sort</span> <span class="asc">asc</span> <span class="desc">desc</span> <i class="fal fa-arrow-to-bottom"></i>
+						<span class="sort-title">Sort</span> <span class="asc">asc</span> <span class="desc">desc</span> <i class="far d fa-arrow-to-bottom"></i>
 					</div>
 				</div>
 				<!-- end sorting widget -->
