--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -71,7 +71,7 @@ blockquote pre {
     border-radius: 2px;
     font-size: 0.85em;
     font-weight: 400;
-    font-family: 'AFParseGroteskMono-Light', sans-serif;
+    font-family: 'dm', sans-serif;
     white-space: nowrap;
     border: 1px solid #e9f1fb;
   }
