--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -79,7 +79,7 @@
     .string {
       color: #A3BE8C;
       font-weight: 400;
-      font-family: 'AFParseGroteskMono-Light';
+      font-family: 'dm';
     }
 
     .title {
@@ -134,7 +134,7 @@
     .meta-string {
       color: #A3BE8C;
       font-weight: 400;
-      font-family: 'AFParseGroteskMono-Light';
+      font-family: 'dm';
     }
 
     .attr {
