--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -7,7 +7,7 @@
   padding: 0 25px 20px;
   white-space: pre-wrap !important;
   font-weight: 400;
-  font-family: 'AFParseGroteskMono-Light';
+  font-family: 'dm';
   @media(max-width: @mobile-breakpoint) {
     padding: 0 20px 20px;
     font-size: 12px !important;
@@ -17,8 +17,9 @@
     }
   }
 
-  .strong {
-    font-weight: bold;
+  .strong,
+  .keyword {
+    font-weight: 900;
   }
 
   .link {
