--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -53,7 +53,7 @@
     }
 
     .built_in {
-      font-family: 'AFParseGroteskMono-Regular', sans-serif;
+      font-family: 'dm', sans-serif;
       color: #38bbed;
     }
 
@@ -107,12 +107,12 @@
 
     .keyword {
       color: #b53bd6;
-      font-family: 'AFParseGroteskMono-Regular', sans-serif;
+      font-family: 'dm', sans-serif;
     }
 
     .string {
       font-weight: 400;
-      font-family: 'AFParseGroteskMono-Light';
+      font-family: 'dm';
       color: #3a9579;
 
       @media(max-width: @mobile-breakpoint) {
