--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -9,12 +9,12 @@
     .attr {
       color: #319ce5 !important;
       font-weight: 700;
-      font-family: 'AFParseGroteskMono-Regular', sans-serif;
+      font-family: 'dm', sans-serif;
     }
 
     .string {
       font-weight: 400;
-      font-family: 'AFParseGroteskMono-Light';
+      font-family: 'dm';
       color: #4d9881;
 
       @media(max-width: @mobile-breakpoint) {
@@ -46,7 +46,7 @@
 
     .strong {
       font-weight: bold;
-      font-family: 'AFParseGroteskMono-Regular', sans-serif;
+      font-family: 'dm', sans-serif;
     }
 
     .link {
