--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -2,7 +2,7 @@
   .hljs {
     &.language-python,
     &.python {
-      border: 1px solid #dbeef6;
+      border: 1px solid #d6eaf2;
       background: #e9f1fb;
       color: #393b46;
 
@@ -16,7 +16,7 @@
       .string {
         color: #32917d !important;
         font-weight: 100;
-        font-family: 'AFParseGroteskMono-Light';
+        font-family: 'dm';
 
         @media(max-width: @mobile-breakpoint) {
           white-space: pre;
@@ -28,7 +28,8 @@
       }
 
       .params {
-        color: #ecb357 !important;
+        color: #d3ac01;
+        font-weight: 900;
       }
 
       .comment {
@@ -49,9 +50,9 @@
 
       .class,
       .title {
-        color: #dea500 !important;
-        font-weight: 700;
-        font-family: 'AFParseGroteskMono-Regular';
+        color: #ce8c20 !important;
+        font-weight: 900;
+        font-family: 'dm';
       }
 
       .attr,
@@ -66,7 +67,7 @@
 
       .keyword {
         color: #2883b1 !important;
-        font-family: 'AFParseGroteskMono-Regular', sans-serif;
+        font-family: 'dm', sans-serif;
       }
     }
   }
