--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -51,7 +51,7 @@
     .string {
       color: #bf51d5;
       font-weight: 400;
-      font-family: 'AFParseGroteskMono-Light';
+      font-family: 'dm';
     }
     /*color: fg_purple*/
     .attribute,
@@ -66,7 +66,7 @@
     .tag {
       color: #5eabec;
       font-weight: 700;
-      font-family: 'AFParseGroteskMono-Regular';
+      font-family: 'dm';
     }
     /*color: fg_aqua*/
     .subst,
