--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -342,7 +342,7 @@
 						color: #8b572b;
 						text-shadow: unset;
 						font-size: .85em;
-						font-family: 'AFParseGroteskMono-Light', sans-serif;
+						font-family: 'dm', sans-serif;
 					}
 
 					pre {
@@ -503,7 +503,7 @@
 				img {
 					margin: 0;
 					display: block;
-					width: 100%;
+					/*width: 100%;*/
 					border-left: 0;
 					border-right: 0;
 					max-width: 100%;
