--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -16,7 +16,7 @@
       @media(max-width: @mobile-breakpoint) {
         display: flex;
       }
-      
+
       * {
         transition: all .3s ease-out;
       }
@@ -26,7 +26,7 @@
           background: @theme-color;
 
           * {
-            color: white;
+            color: white !important;
           }
         }
 
