--- a/partials/author/about-author.hbs
+++ b/partials/author/about-author.hbs
@@ -11,12 +11,12 @@
 				<a href="{{url}}" class="name">{{name}}</a>
 			</div>
 			<div class="authormeta">
-				<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</a></span>
+				<span class="post-count"><i class="far d fa-pencil"></i><a href="{{url}}">{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</a></span>
 				{{#if location}}
-					<span class="location"><i class="fal fa-home"></i><span class="copy">{{location}}</span></span>
+					<span class="location"><i class="far d fa-home"></i><span class="copy">{{location}}</span></span>
 				{{/if}}
 				{{#if website}}
-					<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
+					<span class="website"><a href="{{website}}" targer="_BLANK"><i class="far d fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
 				{{/if}}
 				{{#if twitter}}
 					<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i><span class="copy">{{twitter}}</a></span></span>
