--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -3,7 +3,7 @@
 		{{#if feature_image}}
 			<div class="cover tag-cover series-cover lazy" style="background-image: url({{img_url feature_image absolute="true"}});">
 				<h1 class="tag-name">
-					<i class="fal fa-tag"></i> {{name}}
+					<i class="far d fa-tag"></i> {{name}}
 				</h1>
 				<div class="post-count">
 					{{plural pagination.total empty=(t "No posts") singular=(t "1 Post") plural=(t "% Posts")}}
@@ -18,7 +18,7 @@
 		{{else}}
 			<div class="cover">
 				<h1 class="tag-name">
-					<i class="fal fa-tag"></i> <span>{{name}}</span>
+					<i class="far d fa-tag"></i> <span>{{name}}</span>
 				</h3>
 				<div class="post-count">
 					{{plural pagination.total empty=(t "No posts") singular=(t "1 Post") plural=(t "% Posts")}}
