--- a/partials/posts/roundup-blurb.hbs
+++ b/partials/posts/roundup-blurb.hbs
@@ -1,7 +1,7 @@
 <!-- Start Roundup Blurb -->
 {{#has tag="Roundup"}}
     <div class="post-roundup-blurb">
-        <i class="fal fa-flask"></i>
+        <i class="far d fa-flask"></i>
         <p>Resident Scientist Snkia works tirelessly towards robot utopia. These are his findings.</p>
     </div>
 {{/has}}
