--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -1,23 +1,8 @@
 @import (css) url("//hello.myfonts.net/count/392922");
+@import (css) url("//hackers.nyc3.cdn.digitaloceanspaces.com/fonts/dankmono/css/dank-mono.css");
 
 
 @font-face {font-family: 'AvenirNextLTPro-Light';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.ttf') format('truetype');}
 @font-face {font-family: 'AvenirNextLTPro-Medium';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.ttf') format('truetype');}
 @font-face {font-family: 'TTNormsPro-Regular';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.ttf') format('truetype');}
 @font-face {font-family: 'TTNormsPro-Medium';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.ttf') format('truetype');}
-
-
-@font-face {
-  font-family: 'AFParseGroteskMono-Light';
-  src: url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/AFParseGroteskMono-Light.woff2") format('woff2'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/AFParseGroteskMono-Light.woff") format('woff');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'AFParseGroteskMono-Regular';
-  src: url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/AFParseGroteskMono-Regular.woff2") format('woff2'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/AFParseGroteskMono-Regular.woff") format('woff');
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
