--- a/src/less/pages/about-page.less
+++ b/src/less/pages/about-page.less
@@ -50,7 +50,7 @@
   }
 
   .page-title {
-    margin: 40px 40px 0 !important;
+    margin: 40px 40px 10px !important;
     font-weight: 500;
     @media(max-width: 1100px) {
       font-size: 3em;
