--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -7,7 +7,7 @@
 @import './posts/postmeta.less';
 @import './posts/linkpreview.less';
 @import './posts/postfooter.less';
-@import './posts/responsivetable.less';
+@import './posts/table.less';
 @import './posts/galleries.less';
 @import './posts/article-preview.less';
 @import './posts/serieswidget.less';
