--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -1,5 +1,4 @@
 @import '../global/variables.less';
-
 /* -- Box model ------------------------------- */
 *,
 *:after,
@@ -8,14 +7,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-// Material Design shadows
-//
 
-.shadow-z-1 {
-  -webkit-box-shadow: 0 1px 3px 0 rgba(0,0,0,.12), 0 1px 2px 0 rgba(0,0,0,.24);
-  -moz-box-shadow: 0 1px 3px 0 rgba(0,0,0,.12), 0 1px 2px 0 rgba(0,0,0,.24);
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,.12), 0 1px 2px 0 rgba(0,0,0,.24);
-}
 /* -- Material Design Table style -------------- */
 // Variables
 // ---------------------
@@ -26,8 +18,7 @@
 @table-bg-accent: #f5f5f5;
 @table-bg-hover: rgba(0,0,0,.12);
 @table-bg-active: @table-bg-hover;
-@table-border-color: #e0e0e0;
-// Mixins
+@table-border-color: #e0e0e0; // Mixins
 // -----------------
 
 .transition(@transition) {
@@ -39,6 +30,7 @@
 //
 // -----------------
 // Baseline styles
+
 .tableContainer {
   overflow: hidden;
   border-radius: 3px;
@@ -68,18 +60,15 @@ table {
     cursor: ew-resize !important;
   }
 
-  > tbody,
-   > tfoot,
-  > thead {
-    > tr {
+  tr {
       .transition(all .3s ease);
 
       &:nth-child(odd) {
         background: #f6f8fb;
       }
 
-      > td,
-      > th {
+      > th,
+      > td {
         text-align: left;
         padding: @table-cell-padding;
         vertical-align: top;
@@ -90,46 +79,41 @@ table {
         max-width: 150px;
         text-overflow: ellipsis;
         border-bottom: 0;
-
-
         @media(max-width: @mobile-breakpoint) {
           border: 0;
         }
       }
-
-      th {
-        font-family: 'AvenirNextLTPro-Medium', sans-serif;
-      }
-
-      td {
-        font-size: 0.78em !important;
-        font-weight: 300;
-      }
-    }
   }
 
-  > thead > tr > th {
+  tbody {
+    td,
+    th {
+    font-size: 0.78em !important;
+    font-weight: 300;
+  }
+}
+
+
+  thead > tr > th {
     font-weight: 400;
     color: #ffffff;
     background: #3c414d;
     vertical-align: bottom;
     font-size: 0.8em;
+    font-family: 'AvenirNextLTPro-Medium', sans-serif;
   }
 
-  > colgroup + thead,
+  > caption + thead,
    > thead:first-child,
-  > caption + thead {
+  > colgroup + thead {
     > tr:first-child {
-      > td,
-      > th {
+      > th,
+      > td {
         border-top: 0;
       }
     }
   }
 
-  > tbody + tbody {
-    border-top: 1px solid rgba(0,0,0,.12);
-  }
   // Nesting
   table {
     background-color: @table-bg;
@@ -143,63 +127,22 @@ table {
     border: 0;
   }
 }
-// Condensed table w/ half padding
-.table-condensed {
-  > tbody,
-   > tfoot,
-  > thead {
-    > tr {
-      > td,
-      > th {
-        padding: @table-cell-padding;
-      }
-    }
-  }
-}
-// Bordered version
-//
-// Add horizontal borders between columns.
 
-.table-bordered {
-  border: 0;
-
-  > tbody,
-   > tfoot,
-  > thead {
-    > tr {
-      > td,
-      > th {
-        border: 0;
-      }
-    }
-  }
-
-  > thead > tr {
-    > td,
-    > th {
-      border-bottom-width: 0;
-    }
-  }
-}
 // Zebra-striping
-//
-// Default zebra-stripe styles (alternating gray and transparent backgrounds)
-
 .table-striped {
   > tbody > tr:nth-child(odd) {
-    > th,
-    > td {
-        background: #f6f8fb;
+    > td,
+    > th {
+      background: #f6f8fb;
     }
   }
 }
 // Hover effect
-//
 
 .table-hover {
   > tbody > tr:hover {
-    > th,
-    > td {
+    > td,
+    > th {
       background-color: @table-bg-hover;
     }
   }
@@ -321,7 +264,8 @@ table {
           padding: 0 15px;
           border-bottom: none;
 
-          td {
+          td,
+          th {
             display: block;
             min-height: 1.25em;
             padding: 10px 0 !important;
@@ -352,5 +296,18 @@ table {
         }
       }
     }
+  }
+
+  .rowCounter {
+    text-align: right;
+    width: 100%;
+    font-size: 0.8em;
+    margin-top: -20px;
+    width: fit-content;
+    position: absolute;
+    right: 0;
+    background: #555760;
+    padding: 0 9px;
+    color: white;
   }
 }
