--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -29,8 +29,12 @@
           {{#primary_author}}
             {{primary_author.bio}}
             {{#if profile_image}}
-              <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} avatar" loading="lazy" class="avi lazy"><span>{{name}}</span></a>
-              <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} avatar" loading="lazy" class="avi lazy">
+              <a href="{{url}}" class="meta-item author">
+                <img src="{{img_url profile_image}}" alt="{{name}} avatar" loading="lazy" class="avi lazy">
+                <span>{{name}}</span>
+              </a>
+              <a href="{{url}}" class="author-mobile">
+                <img src="{{img_url profile_image}}" alt="{{name}} avatar" loading="lazy" class="avi lazy">
                 <div class="info">
                   <span class="mobile-name">{{slug}}</span>
                   <span class="mobile-date">{{date published_at format="MMM DD"}}</span>
@@ -46,7 +50,10 @@
               </a>
             {{/if}}
           {{/primary_author}}
-          <span class="date meta-item"><i class="far d fa-calendar"></i> <span>{{date published_at format="MMM DD"}}</span></span>
+          <span class="date meta-item">
+            <i class="far d fa-calendar"></i>
+            <span>{{date published_at format="MMM DD"}}</span>
+          </span>
         </div>
         <a href="{{url}}" class="btn btn-default">{{t "Continue Reading"}}</a>
       </div>
