--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -3,11 +3,10 @@
   padding: 40px;
   min-height: 85px;
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
-  width: fit-content;
   margin: 20px auto;
   justify-content: space-between;
   display: flex;
-  width: 100%;
+  max-width: 100%;
   @media(max-width: @tablet-breakpoint) {
     margin: 20px 0;
   }
