--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -2,9 +2,9 @@
   .hljs {
     &.language-python,
     &.python {
-      border: 1px solid #d6eaf2;
-      background: #e9f1fb;
-      color: #393b46;
+      border: 1px solid #d0dff2;
+      background: #e5f1ff;
+      color: #4b5260;
 
       .meta {
         color: #6c6c6c !important;
@@ -62,7 +62,7 @@
       .template-variable,
       .type,
       .variable {
-        color: #bc82d8 !important;
+        color: #9f6fb6 !important;
       }
 
       .keyword {
