--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -4,7 +4,7 @@
 	pagination
 ====================================================*/
 .pagination {
-	margin: 0 auto 20px;
+	margin: 0 auto;
 	text-align: center;
 	display: block;
 	order: 20;
@@ -52,7 +52,6 @@
 		background: none;
 		border-radius: 1px;
 		padding: 8px 13px;
-		height: 31px;
 		line-height: 1;
 		font-size: 1em;
 		font-weight: 700;
