--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -13,7 +13,7 @@
     &.properties,
     &.shell {
       background-color: #2E3440;
-      color: #cdd2d9;
+      color: #e1e5ec;
       font-weight: normal;
 
       .title {
