--- a/src/less/posts/newsletter-widget.less
+++ b/src/less/posts/newsletter-widget.less
@@ -20,7 +20,8 @@
   }
 
   .subscribe-input-class {
-    width: 100%;
+    width: -webkit-fill-available;
+    width: -moz-available;
     font-size: .8em;
     font-family: 'AvenirNextLTPro-Light', sans-serif;
     padding: 12px;
