--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -113,13 +113,14 @@
         svg {
           fill: #5D6178;
           color: #5D6178;
-          height: 28px;
-          width: 28px;
+          height: 25px;
+          width: 25px;
           overflow: visible;
 
           @media(max-width: @mobile-breakpoint) {
-            height: 20px;
-            width: 20px;
+            height: 15px;
+            width: 15px;
+            margin-right: 5px;
           }
 
           * {
@@ -142,7 +143,7 @@
 
           * {
             width: 100%;
-            margin: 0;
+            margin: 0 !important;
           }
         }
 
