--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -43,6 +43,7 @@
         float: left;
         margin-right: 5px;
         margin-bottom: 0;
+        border-right: 1px solid #d5d5d5;
       }
     }
 
