--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -18,7 +18,7 @@ header {
       padding: 0;
       max-width: none;
       width: auto;
-      margin: 5px 0 20px;
+      margin: 5px 0 0;
       justify-content: space-between;
     }
 
