--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -21,7 +21,7 @@ table {
 
   thead {
     tr {
-      background: #363940 !important;
+      background: #2f3440 !important;
       color: white;
       font-size: 1.1em;
     }
@@ -107,14 +107,15 @@ table {
         height: 100%;
         box-shadow: 1px 0 4px rgba(62, 69, 86, 0.7);
         z-index: 2;
-        background: #3c414d;
+        background: #2f3440;
+        padding-left: 10px;
 
         tr {
           display: block;
           border-spacing: 0;
           padding: 0;
           height: 100%;
-          background: #3c414d;
+          background: #2f3440;
 
           &:hover {
             background-color: inherit;
@@ -122,8 +123,11 @@ table {
           }
 
           th {
-            display: block;
-            padding: 10px !important;
+            display: table-row;
+            height: 65px !important;
+            margin-left: 5px;
+            padding: 0;
+            line-height: 3;
             font-family: @body-font;
             letter-spacing: 0.5px;
             text-align: left;
@@ -131,14 +135,12 @@ table {
             font-weight: 500;
             min-height: 50px;
             margin: 5px 0;
-            width: 100% !important;
             margin-right: 0 !important;
             max-width: unset !important;
             color: #ffffff;
-            background: #3c414d;
+            background: #2f3440;
             vertical-align: bottom;
             font-size: 0.8em;
-            font-family: 'AvenirNextLTPro-Medium', sans-serif;
 
             * {
               font-size: 1em;
@@ -148,7 +150,7 @@ table {
       }
 
       tbody {
-        margin-left: 120px;
+        margin-left: 131px;
         width: auto;
         position: relative;
         overflow-x: auto;
