mobile table styles

--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -109,6 +109,7 @@ table {
         z-index: 2;
         background: #2f3440;
         padding-left: 10px;
+        overflow: hidden;
 
         tr {
           display: block;
@@ -124,7 +125,7 @@ table {
 
           th {
             display: table-row;
-            height: 65px !important;
+            height: 62px !important;
             margin-left: 5px;
             padding: 0;
             line-height: 3;
@@ -139,8 +140,8 @@ table {
             max-width: unset !important;
             color: #ffffff;
             background: #2f3440;
-            vertical-align: bottom;
-            font-size: 0.8em;
+            vertical-align: middle;
+            font-size: 0.7em;
 
             * {
               font-size: 1em;
