misc post styles

--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -28,6 +28,9 @@
 		align-items: center;
 		justify-content: flex-start;
 		margin: 20px 0 20px;
+		@media(max-width: @mobile-breakpoint) {
+			margin: 20px 0 0;
+		}
 
 		a {
 			color: #99a2b3 !important;
@@ -66,7 +69,7 @@
 			margin: 15px 0 10px !important;
 		}
 		@media(max-width: @mobile-breakpoint) {
-			margin: 15px 0 0 !important;
+			margin: 5px 0 0 !important;
 		}
 
 		.share-icons {
