--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -7,8 +7,8 @@ header {
   }
 
   .post-meta {
-    margin: 5px 0 0;
-    color: @text-color;
+    margin: 7px 0 0;
+    color: lighten(@text-color, 10%);
     font-size: 12px;
     display: flex;
     width: auto;
@@ -18,12 +18,12 @@ header {
       padding: 0;
       max-width: none;
       width: auto;
-      margin: 5px 0 0;
+      margin: 5px 0 15px;
       justify-content: space-between;
     }
 
     i {
-      color: @text-color;
+      color: lighten(@text-color, 10%);
       font-weight: 400;
     }
 
