--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -12,7 +12,7 @@
     padding: 20px 10px 20px;
   }
   @media(max-width: @mobile-breakpoint) {
-    margin: 0 0 20px;
+    margin: -10px 0 20px;
     padding: 0 0 20px;
   }
 
