--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -6,7 +6,7 @@
     background-position-y: center;
     height: 250px;
     background-color: #324a6e;
-    background-blend-mode: darken;
+    background-blend-mode: multiply;
     box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
     @media(max-width: @mobile-breakpoint) {
       margin-left: calc(~"-50vw + 50%") !important;
@@ -30,7 +30,7 @@
       color: white;
       font-family: @body-font;
       text-shadow: 2px 2px 0 #15133c, 2px 2px 10px #15133c;
-      font-size: 1.2em;
+      font-size: 1em;
     }
   }
 
@@ -248,7 +248,9 @@
 
     @media(max-width: @mobile-breakpoint) {
       grid-template-columns: [first] 1fr;
+      grid-template-rows: 342px;
       margin: 20px 20px 30px;
+      grid-column-gap: 15px;
     }
 
     .tag-wrapper {
@@ -272,7 +274,7 @@
         }
       }
       @media(max-width: 900px) {
-        margin: 0 0 25px;
+        margin: 0;
 
         &:last-of-type {
           margin-bottom: 0;
@@ -361,7 +363,7 @@
           height: 140px;
         }
         @media(max-width: @mobile-breakpoint) {
-          height: 154px;
+          height: 134px;
         }
 
         h2 {
