--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -40,8 +40,12 @@
 		.post-image {
 			line-height: 1;
 			margin: 25px 0 0;
+			border: 1px solid #e2e7ee;
+			height: 447px;
+			overflow: hidden;
 			@media(max-width: @tablet-breakpoint) {
 				margin: 20px 0 0;
+				height: unset;
 			}
 			@media (max-width: 600px) {
 				margin: 20px 0 0;
@@ -71,7 +75,6 @@
 			@media(max-width: @mobile-breakpoint) {
 				font-size: 1.65em;
 				max-width: auto;
-				margin: 10px 0 5px;
 				letter-spacing: 0;
 				line-height: 1.1;
 				color: @h1-color;
@@ -134,7 +137,7 @@
 						line-height: 1.3;
 						font-weight: 500 !important;
 						border: none;
-						margin-bottom: 10px;
+						margin-bottom: 5px;
 					}
 				}
 
@@ -151,7 +154,7 @@
 					@media(max-width: @mobile-breakpoint) {
 						text-align: left;
 						line-height: 1.3;
-						margin-bottom: 10px;
+						margin-bottom: 5px;
 						font-family: @header-font-bold;
 					}
 				}
@@ -538,7 +541,6 @@
 						display: block;
 						width: auto !important;
 						height: auto;
-						font-size: 13px !important;
 						margin-top: 5px;
 						margin-right: calc(-50vw + 50%) !important;
 						margin-left: calc(-50vw + 50%) !important;
