misc post styles

--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -546,7 +546,7 @@ nav {
 
 	header {
 		margin-bottom: 40px;
-		box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2) !important;
+		box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2);
 		@media(max-width: @mobile-breakpoint) {
 			margin-bottom: 0;
 		}
