minor post styles

--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -180,7 +180,7 @@ table {
           th {
             display: block;
             min-height: 1.25em;
-            padding: 10px 0 !important;
+            padding: 10px 0;
             border-spacing: 0;
             border-collapse: collapse;
             overflow: hidden;
